--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1,10 +1,17 @@
 body {
-  background-color: green;
+  color: green;
+  padding:20px;
+  margin: 0 auto;
 }
 
 table,
-td {
-  border: 1px solid black;
+td 
+{
+  test -align: center;
+  width:24px; 
+  height: 24px;
+  padding:12px;
+  border: 1px solid grey;
 }
 
 table {
@@ -15,3 +22,9 @@ table {
 td {
   padding: 12px;
 }
+
+highlight {
+  background-color: grey;
+  box-shadow: 0;
+}
+
