--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1,20 +1,44 @@
-h1{
-    text-align: center;
-}
-
-table,
-td{
-    border: 2px solid;
-    border-color: purple;
+table, td {
+  border: 1px solid black;
+  text-align: center;
 }
 
 table {
-    border-collapse: collapse;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
+  border-collapse: collapse;
+  margin-top: 125px;
+  margin-bottom: 10px;
 }
 
-body{
-    background-color: lightblue;
+td {
+  padding: 12px;
+}
+
+#matrix {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#diagonal {
+  background-color: yellow;
+  color: red;
+}
+
+h1 {
+  text-align: center;
+}
+
+#container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#text-one{
+  position: absolute;
+  color: gray;
+  height: 75px;
+  width: 75vw;
+  border: 1px solid gray;
+  margin-top: 100px;
 }
